<resources>
    <string name="app_name">ChildStars</string>
    <string name="registration_title">Введите свой адрес электронной почты</string>
    <string name="registration_titleError">Необходим e-mail</string>
    <string name="registration_passError">Введите пароль</string>
    <string name="registration_title2">Войти в приложение</string>
    <string name="registration_name">Введите имя</string>
    <string name="registration_initText">Регистрация родителя</string>
    <string name="registration_childInitText">Регистрация в телефоне ребёнка</string>
    <string name="registration_addChild">Добавить ребёнка</string>
    <string name="registration_childCodeDescription">Введите этот код при регистрации на устройстве ребёнка</string>
    <string name="registration_checkChildCode">Проверить</string>
    <string name="registration_childName">Введите имя ребёнка</string>
    <string name="registration_addChildCode">Введите код</string>
    <string name="registration_emailHint">Введите e-mail</string>
    <string name="registration_passwordHint">Введите пароль</string>
    <string name="alertCommon">Вы что-то сделали не так или Сергей этого пока не сделал</string>
    <string name="activityTitle_btnPositiveText">ОК</string>
    <string name="activityTitle_btnNegativeText">Отмена</string>

    <string name="alert_error_unknown_message">При выполнении действия произошла неизвестная ошибка.</string>
    <string name="alert_error_otp">Ошибка при запросе кода.</string>
    <string name="alert_error_unknown_user">Пользователь с такими данными не найден, проверьте введённые логин и пароль, либо зарегистрируйтесь.</string>
    <string name="alert_error_forbidden_message">Недостаточно прав для выполнения действия.</string>
    <string name="alert_error_unsupported_api_message">Пожалуйста, обновите приложение до последней версии.</string>
    <string name="alert_error_invalid_message">Пожалуйста, введите корректные данные и повторите попытку.</string>
    <string name="alert_error_maintenance_message">В настоящее время ведутся технические работы. Пожалуйста, повторите попытку позднее.</string>
    <string name="alert_error_failed_message">Серверу не удалось успешно исполнить Ваш запрос.</string>
    <string name="alertRegistrationEmail">Проверьте корректность введения электронной почты.</string>
    <string name="alertConfirmRegistration_incorrect">Неверно введен код.</string>
    <string name="alertConfirmRegistration_timeOut">Время действия пароля истекло.</string>
    <string name="alertConfirmRegistration_loginAttemptsLimitExceeded">Превышено количество попыток ввода.</string>
    <string name="alert_error_network">Произошла ошибка при запросе данных.</string>
    <string name="alertLetterLanguage">Ф.И.О. должны быть написаны на одном языке.</string>
    <string name="alertPayBtnToMainActivity"><u>На главный экран</u></string>

</resources>